# whisper-asr-webservice-nemo

./: Dockerfile  Dockerfile.gpu  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
app/: webservice.py
app/asr_models/: mbain_whisperx_engine.py
