[project]
name = "whisper-asr-webservice"
version = "1.2.0"
description = "Whisper ASR Webservice is a general-purpose speech recognition webservice."
authors = [
    { name = "Ahmet Öner" },
    { name = "Besim Alibegovic" },
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "speech-recognition",
    "whisper",
    "asr",
    "webservice",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi (>=0.115.14)",
    "uvicorn[standard] (>=0.35.0)",
    "python-multipart (>=0.0.20)",
    "ffmpeg-python (>=0.2.0)",
    "numpy (>=2.2.6)",
    "openai-whisper (>=20250625)",
    "faster-whisper (>=1.1.1)",
    "tqdm (>=4.67.1)",
    "llvmlite (>=0.44.0)",
    "numba (>=0.61.2)",
    "whisperx",
]

[project.urls]
Homepage = "https://github.com/wzelek/whisper-asr-webservice-nemo/"
Repository = "https://github.com/wzelek/whisper-asr-webservice-nemo"

[project.scripts]
whisper-asr-webservice = "app.webservice:start"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "ruff>=0.9.6,<1.0.0",
    "black>=25.1.0,<26.0.0",
    "mkdocs-material>=9.6.4,<10.0.0",
    "pymdown-extensions>=10.14.3,<11.0.0",
]

[tool.uv]
default-groups = "all"

[project.optional-dependencies]
cpu = ["torch", "torchaudio"]
cuda = ["torch", "torchaudio"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "extra == 'cpu' and extra != 'cuda' and platform_machine == 'x86_64' and sys_platform != 'darwin'" },
    { index = "pytorch-cuda", marker = "extra == 'cuda' and extra != 'cpu' and platform_machine == 'x86_64' and sys_platform != 'darwin'" },
]
torchaudio = [
    { index = "pytorch-cpu", marker = "extra == 'cpu' and extra != 'cuda' and platform_machine == 'x86_64' and sys_platform != 'darwin'" },
    { index = "pytorch-cuda", marker = "extra == 'cuda' and extra != 'cpu' and platform_machine == 'x86_64' and sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


whisperx = { git = "https://github.com/wzelek/whisperX-nemo", rev = "main" }

[tool.uv.build-backend]
module-name = ["app"]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
known-first-party = []
